# sp23-hw6

./: README.md  main.py  network.py  pyproject.toml  unit_tests.py  utils.py
configs/: mnist.yaml  unit_test.yaml
