[tool.poetry]
name = "hw6"
version = "1.0.0"
description = "comsw4701 hw6"
authors = ["Neil Nie <yongyang.nie@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
hydra-core = "^1.3.2"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
omegaconf = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
